correct spacing on icon

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -419,3 +419,6 @@
   margin-bottom:10px;
   text-align:center;
 }
+.sourced-icon {
+  padding-left:8px;
+}
